--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,30 @@
-version: "3.9"
-
 services:
+  db:
+    image: postgres:15
+    environment:
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
+      interval: 5s
+      retries: 10
+      timeout: 5s
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
   web:
     build: .
-    ports:
-      - "8000:8000"
+    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    depends_on:
+      db:
+        condition: service_healthy
     volumes:
       - .:/app
-    environment:
-      - DEBUG=1
-      - DJANGO_HOST=0.0.0.0
-      - DJANGO_PORT=8000
-    command: >
-      sh -c "python manage.py migrate &&
-             python manage.py runserver $DJANGO_HOST:$DJANGO_PORT"
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+
+volumes:
+  postgres_data:
