--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ dependencies = [
     "et-xmlfile==2.0.0",
     "numpy==1.26.4",
     "openpyxl==3.1.5",
-    "pandas==2.3.3",
     "python-dateutil==2.9.0.post0",
     "pytz==2025.2",
     "six==1.17.0",
@@ -19,5 +18,7 @@ dependencies = [
     "tzdata==2025.2",
     "python-dotenv==1.0.1",
     "psycopg2-binary==2.9.11",
+    "polars[excel]==0.21.7",
 ]
+
 
